--- a/Image_Inpainting_CIFAR10_Dataset__github.ipynb
+++ b/Image_Inpainting_CIFAR10_Dataset__github.ipynb
@@ -3175,7 +3175,7 @@
       },
       "source": [
         "sample_inputs, sample_masks, sample_truths = Test_dataiter.next()\n",
-        "sample_inputs, sample_masks = sample_inputs.cuda(), sample_masks.cuda()\n",
+        "sample_inputs, sample_masks = sample_inputs, sample_masks\n",
         "\n",
         "model.eval()\n",
         "with torch.no_grad():\n",
